@@ -14,8 +14,9 @@
         3.1</a></strong> (Build $Revision$)<br />
 
         <ul>
-			<li>[Feature] Amazon CloudFront Support (S3)</li>
-			<li>[Feature] Cloud Files Support [<a href="http://trac.cyberduck.ch/ticket/2745">#2745</a>] (Mosso)</li>
+<li>[Feature] Amazon CloudFront Support (S3)</li>
+<li>[Feature] Cloud Files Support [<a href="http://trac.cyberduck.ch/ticket/2745">#2745</a>] (Mosso)</li>
+<li>[Feature] Pre-configured protocol settings for MobileMe iDisk (WebDAV)</li>
         </ul>
     </div>
 
