@@ -7,6 +7,7 @@ Changelog. Last modified: $Date$
 3.1 [http://trac.cyberduck.ch/query?status=closed&milestone=3.1]
 - [Feature] Amazon CloudFront Support (S3)
 - [Feature] Cloud Files Support [#2745] (Mosso)
+- [Feature] Pre-configured protocol settings for MobileMe iDisk (WebDAV)
 
 3.0.3 [http://trac.cyberduck.ch/query?status=closed&milestone=3.0.3]
 - [Bugfix] Arbitrary Crashes [#2142]
